# SDRPlayServer

./: CMakeLists.txt  Makefile  README.md  sdrplayserver.c
src/: sdrplayserver.c  sdrplayserver.h
